Added game files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello world
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Games</title>
+</head>
+<body>
+    <button onclick="window.location.replace('game1.html');">Play Game 1</button><br><br>
+    <button onclick="window.location.replace('game2.html');">Play Game 2</button><br><br>
+    <button onclick="window.location.replace('game3.html');">Play Game 3</button>
+</body>
+</html>
