--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="images/favicon.ico">
 	<title>Games</title>
 </head>
 <body>
-    <button onclick="window.location.replace('game1.html');">Play Game 1</button><br><br>
-    <button onclick="window.location.replace('game2.html');">Play Game 2</button><br><br>
-    <button onclick="window.location.replace('game3.html');">Play Game 3</button>
+    <button onclick="window.location.replace('views/game1.html');">Play Game 1</button><br><br>
+    <button onclick="window.location.replace('views/game2.html');">Play Game 2</button><br><br>
+    <button onclick="window.location.replace('views/game3.html');">Play Game 3</button>
 </body>
 </html>
