Added simple pretty css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 	<title>Games</title>
 </head>
 <body>
-    <button onclick="window.location.replace('views/game1.html');">Play Game 1</button><br><br>
-    <button onclick="window.location.replace('views/game2.html');">Play Game 2</button><br><br>
-    <button onclick="window.location.replace('views/game3.html');">Play Game 3</button>
+    <div class="center">
+        <button onclick="window.location.replace('views/game1.html');">Play Game 1</button>
+        <button onclick="window.location.replace('views/game2.html');">Play Game 2</button>
+        <button onclick="window.location.replace('views/game3.html');">Play Game 3</button>
+    </div>
 </body>
 </html>
