--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Games</title>
 </head>
 <body>
+	<script src="scripts/counter.js" type="text/javascript"></script>
     <div class="center">
         <button onclick="window.location.replace('views/game1.html');">Play Game 1</button>
         <button onclick="window.location.replace('views/game2.html');">Play Game 2</button>
