Fixed previous page bug

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="center">
-        <button onclick="window.location.replace('game1.html');">Play Game 1</button>
-        <button onclick="window.location.replace('game2.html');">Play Game 2</button>
-        <button onclick="window.location.replace('game3.html');">Play Game 3</button>
+        <button href="game1.html">Play Game 1</button>
+        <button href="game1.html">Play Game 2</button>
+        <button href="game1.html">Play Game 3</button>
     </div>
 </body>
 </html>
