--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <div class="center">
-        <button href="game1.html">Play Game 1</button>
-        <button href="game1.html">Play Game 2</button>
-        <button href="game1.html">Play Game 3</button>
+    	<!--Makes buttons clickable and linkable-->
+    	<a href="game1.html">
+        	<button>Play Game 1</button>
+        </a>
+        <a href="game1.html"><!--Should make it game2.html when available-->
+        	<button>Play Game 2</button>
+        </a>
+        <a href="game1.html"><!--Should make it game3.html when available-->
+        	<button>Play Game 3</button>
+        </a>
     </div>
 </body>
 </html>
